[package]
name = "cherry-markdown-tauri"
version = "0.0.1"
description = "A Tauri App"
authors = ["xwx"]
license = "Apache-2.0 license"
repository = ""
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2", features = ["shell-open", "window-all"] }
rfd = "0.10.0"
uuid = "1.2.2"
lazy_static = "*"
rusqlite = { version = "0.28.0", features = ["bundled"] }
chrono = "*"
imara-diff = "*"
[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
